<resources>
    <string name="app_name">AUBORA VACATION</string>
    <string name="action_settings">Settings</string>
    <string name="stringquicklinks">Quicklinks</string>
    <string name="stringwebcheckin">Web-Check-In</string>
    <string name="stringhandgepäck">Handgepäck</string>
    <string name="stringcheckliste">Meine Reisetools</string>
    <string name="stringnotfallnummern">Notfallnummern</string>
    <string name="stringzollundartenschutz">Zoll &amp; Artenschutz</string>
    <string name="stringkontakt">Kontakt</string>
    <string name="stringwebsite">Website</string>
    <string name="title_activity_quicklinks">Quicklinks</string>
    <string name="title_activity_webcheckins">Web-Check-In</string>
    <string name="title_activity_checkliste">Meine Reisetools</string>
    <string name="title_activity_handgepaeck">Handgepäck</string>
    <string name="title_activity_notfallnummern">Notfallnummern</string>
    <string name="title_activity_zollun_artenschutz">Zoll &amp; Artenschutz</string>
    <string name="title_activity_kontakt">Kontakt</string>
    <string name="title_activity_website">Website</string>
    <string name="stringRV">Europäische Reiseversicherung</string>
    <string name="stringAVhotline">AUBORA VACATION </string>
    <string name="stringFlughafen">Flughafen Wien</string>
    <string name="stringTerminal">Terminalübersicht</string>
    <string name="stringReiseversicherung">Europäische Reiseversicherung</string>
    <string name="stringAußenministerium">Außenministerium</string>
    <string name="stringAerLingus">Aer Lingus</string>
    <string name="stringAirBerlin">Air Berlin</string>
    <string name="stringAirFrance">Air France</string>
    <string name="stringAlitalia">Alitalia</string>
    <string name="stringAustrianAirlines">Austrian Airlines</string>
    <string name="stringBritishAirways">British Airways</string>
    <string name="stringEmirates">Emirates</string>
    <string name="stringEurowings">Eurowings</string>
    <string name="stringEvaAir">Eva Air</string>
    <string name="stringIberia">Iberia</string>
    <string name="stringKLM">KLM</string>
    <string name="stringNiki">Niki</string>
    <string name="title_activity_kottingbrunn">Filiale Kottingbrunn</string>
    <string name="title_activity_traiskirchen">Filiale Traiskirchen</string>
    <string name="stringGrößen">Konfektionsgrößen-Rechner</string>
    <string name="title_activity_createlist">Konfektionsgrößen-Rechner</string>
    <string name="stringKTB">Filiale Kottingbrunn</string>
    <string name="stringTRK">Filiale Traiskirchen</string>
    <string name="title_activity_man">Hemden</string>
    <string name="stringMan">Männer</string>
    <string name="stringWoman">Frauen</string>
    <string name="stringChild">Kinder</string>
    <string name="title_activity_woman">Frauen</string>
    <string name="title_activity_child">Kinder</string>
    <string name="stringClothesLabel"><b>Kleidungsstück:</b></string>
    <string name="stringOrigin"><b>Kleidungskonfektion von:</b></string>
    <string name="stringConvert"><b>umrechnen in:</b></string>
    <string name="stringUmrechnen">Umrechnen</string>
    <string name="title_activity_choose_cloth_man">Kleidungsstücke</string>
    <string name="title_activity_choose_cloth_woman">Kleidungsstücke</string>
    <string name="title_activity_choose_cloth_child">Kleidungsstücke</string>
    <string name="stringHemdenHerren">Hemden</string>
    <string name="stringHosenHerren">Hosen</string>
    <string name="stringUnterwäscheHerren">Unterwäsche</string>
    <string name="stringJeansHerren">Jeans</string>
    <string name="stringAnzugJackenHerren">Anzug, Jacken</string>
    <string name="stringSchuheHerren">Schuhe</string>
    <string name="title_activity_calc_unterwaesche">Unterwäsche</string>
    <string name="title_activity_choose_anzug_jacken_herren">Anzug, Jacken</string>
    <string name="title_activity_choose_schuhe_herren">Schuhe</string>
    <string name="title_activity_calc_jeans_herren">Jeans</string>
    <string name="title_activity_calc_hosen_herren">Hosen</string>
    <string name="stringBekleidungsgrößenFrauen">Bekleidungsgrößen</string>
    <string name="stringSchuheFrauen">Schuhe</string>
    <string name="stringBHs">BHs</string>
    <string name="stringBHsInternationalFrauen">BH-Größen International</string>
    <string name="stringUnterwäscheFrauen">Unterwäsche</string>
    <string name="title_activity_calc_unterwaesche_frauen">Unterwäsche</string>
    <string name="title_activity_calc_bhs_international_frauen">BH-Größen International</string>
    <string name="title_activity_calc_schuhe_frauen">Schuhe</string>
    <string name="title_activity_calc_bekleidungsgroessen_frauen">Bekleidungsgrößen</string>
    <string name="stringBabygrößen">Babygrößen</string>
    <string name="stringKindergrößen">Kindergrößen</string>
    <string name="stringJungengrößen">Jungengrößen</string>
    <string name="stringMädchengrößen">Mädchengrößen</string>
    <string name="stringKinderUndBabyschuhe">Kinder- und Babyschuhe</string>
    <string name="title_activity_calc_jungengroessen">Jungengrößen</string>
    <string name="title_activity_calc_maedchengroessen">Mädchengrößen</string>
    <string name="title_activity_calc_babygroessen">Babygrößen</string>
    <string name="title_activity_calc_kinder_und_babyschuhe">Kinder- und Babyschuhe</string>
    <string name="title_activity_calc_kindergroessen">Kindergrößen</string>
    <string name="title_activity_travel_lists">Reiselisten</string>
    <string name="travelList">Reiselisten</string>
    <string name="city">Städtereise</string>
    <string name="roundtrips">Rundreise</string>
    <string name="familyvacation">Autoreise</string>
    <string name="title_activity_city">Städtereise</string>
    <string name="title_activity_roundtrip">Rundreise</string>
    <string name="title_activity_familyvacation">Autoreise</string>
    <string name="title_activity_ship">Kreuzfahrt</string>
    <string name="title_activity_standardvacation">Badeurlaub</string>
    <string name="Badeurlaub">Badeurlaub</string>
    <string name="Kreuzfahrt">Kreuzfahrt</string>
    <string name="title_activity_map_traiskirchen">Filiale Traiskirchen</string>
    <string name="textMapButtonTRK">Standort anzeigen</string>
    <string name="textMapButtonKTB">Standort anzeigen</string>
    <string name="title_activity_map_kottingbrunn">Filiale Kottingbrunn</string>
    <string name="callTRK">Filiale anrufen</string>
    <string name="callKTB">Filiale anrufen</string>

    <string name="Ausweise">Ausweise (Reisepass, Führerschein)</string>
    <string name="Visum">Visum (falls, erforderlich)</string>
    <string name="Reiseunterlagen">Reiseunterlagen (Tickets, Voucher etc.)</string>
    <string name="Bargeld">Bargeld, Kreditkarten, Bankomatkarte</string>
    <string name="Reiseversicherungskarte">Reiseversicherungskarte</string>
    <string name="Impfpass">Impfpass (falls erforderlich)</string>
    <string name="Medikamente">Medikamente</string>
    <string name="Adressen">Wichtige Adressen und Kontakte</string>
    <string name="Reiseapotheke">Reiseapotheke und Erste Hilfe Set</string>
    <string name="Verhütungsmittel">Verhütungsmittel (spez. Kondome)</string>
    <string name="Brille">Brille, Kontaktlinsen, Sonnenbrille</string>
    <string name="Damenhygiene">Damenhygiene</string>
    <string name="Unterwäsche">Unterwäsche/Socken und Ersatz</string>
    <string name="Hose">Hose/Rock</string>
    <string name="Pullover">Pullover/Weste</string>
    <string name="Jacke">Jacke/Windjacke</string>
    <string name="Sport">Sport-/Freizeitschuhe</string>
    <string name="Trekking">Trekking-/Wanderschuhe</string>
    <string name="Flip">Flip Flops</string>
    <string name="Badekleidung">Badekleidung</string>
    <string name="Shorts">Shorts</string>
    <string name="Kopfbedeckung">Kopfbedeckung (Regen/Sonne)</string>
    <string name="Abendgarderobe">Abendgarderobe (falls erforderlich)</string>
    <string name="Regenbekleidung">Regenbekleidung</string>
    <string name="Halstuch">Halstuch/Schal</string>
    <string name="Handschuhe">Handschuhe</string>
    <string name="Duschgel">Duschgel/Shampoo</string>
    <string name="Zahnbürste">Zahnbürste/Zahnpasta</string>
    <string name="Hand">Hand-/Hautcreme</string>
    <string name="Lippenpflege">Lippenpflege</string>
    <string name="Sonnencreme">Sonnencreme</string>
    <string name="Rasierschaum">Rasierschaum/Rasiergel/Rasierer</string>
    <string name="Deo">Deo</string>
    <string name="Kamm">Kamm/Bürste</string>
    <string name="Haargel">Haargel/Haarwachs/Haarspray</string>
    <string name="Spiegel">Spiegel</string>
    <string name="Desinfektionsmittel">Desinfektionsmittel</string>
    <string name="Feuchttücher">Feuchttücher</string>
    <string name="Insektenschutz">Insektenschutz</string>
    <string name="Nagelschere">Nagelschere/Nagelfeile</string>
    <string name="Haarfön">Haarfön</string>
    <string name="Taschentücher">Taschentücher/WC-Papier</string>
    <string name="Bade">Bade-/Handtücher (falls erforderlich)</string>
    <string name="Handy">Handy und Simkarte (Roamingpaket)</string>
    <string name="Laptop">Laptop/Tablet</string>
    <string name="Fotoapparat">Fotoapparat und Zubehör</string>
    <string name="Videokamera">Videokamera und Zubehör</string>
    <string name="Ladegeräte">Ladegeräte und Ersatzakkus</string>
    <string name="Speichermedien">Speichermedien (z.B. SD-Karte, USB-Stick)</string>
    <string name="Taschenlampe">Taschenlampe</string>
    <string name="Wecker">Wecker</string>
    <string name="GPSSystem">GPS-System/Routenplaner</string>
    <string name="Adapter">Adapter/Steckerset</string>
    <string name="Fernglas">Fernglas</string>
    <string name="Reiseführer">Reiseführer/Landkarten/Stadtpläne</string>
    <string name="Sprachführer">Sprachführer</string>
    <string name="Notizbuch">Notizbuch/Stift</string>
    <string name="Taschenmesser">Taschenmesser (Achtung bei Flug!)</string>
    <string name="Feuerzeug">Feuerzeug (Achtung bei Flug!)</string>
    <string name="Nähzeug">Nähzeug</string>
    <string name="Lesestoff">Lesestoff, Spiele, Musik</string>
    <string name="Ratgeber">Ratgeber Verhaltenstipps</string>
    <string name="KFZ">KFZ-Papiere (Zulassung, Versicherungskarte)</string>
    <string name="Mitgliedskarte">Mitgliedskarte (Automobilclub)</string>
    <string name="Maut">Mautvignette (bzw. Geld, Maut vor Ort)</string>
    <string name="Reisekaugummi">Reisemedikamente, Reisekaugummi</string>
    <string name="Getränke">Getränke, Reiseproviant</string>
    <string name="KFZDokumente">Sonstige KFZ-Dokumente (z.B. Vollmacht)</string>
    <string name="KFZErsatzteile">Sonstige KFZ-Ersatzteile (z.B. Ersatzlampen)</string>
    <string name="Warnwesten">Weitere Warnwesten (1 pro Person)</string>
    <string name="Tauschgeschenke">Tauschgeschenke für Einheimische</string>
    <string name="Reiseprogramm">Detailliertes Reiseprogramm</string>
    <string name="Trinkgeld">Kleine Scheine für Trinkgeld</string>
    <string name="Euronotruf">Euro-Notruf</string>


</resources>
