<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.flo.av.Roundtrip"
    tools:showIn="@layout/activity_roundtrip"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textRoundtrip"
        android:textSize="16dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ausweise"
        android:id="@+id/roundtrip"
        android:key="round"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Visum"
        android:id="@+id/roundtrip1"
        android:key="round1"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Reiseunterlagen"
        android:id="@+id/roundtrip2"
        android:key="round2"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Bargeld"
        android:id="@+id/roundtrip3"
        android:key="round3"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Reiseversicherungskarte"
        android:id="@+id/roundtrip4"
        android:key="round4"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Impfpass"
        android:id="@+id/roundtrip5"
        android:key="round5"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Adressen"
        android:id="@+id/roundtrip6"
        android:key="round6"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Medikamente"
        android:id="@+id/roundtrip7"
        android:key="round7"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Reiseapotheke"
        android:id="@+id/roundtrip8"
        android:key="round8"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Brille"
        android:id="@+id/roundtrip9"
        android:key="round9"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Verhütungsmittel"
        android:id="@+id/roundtrip10"
        android:key="round10"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Damenhygiene"
        android:id="@+id/roundtrip11"
        android:key="round11"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Reisekaugummi"
        android:id="@+id/roundtrip12"
        android:key="round12"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Unterwäsche"
        android:id="@+id/roundtrip13"
        android:key="round13"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Hose"
        android:id="@+id/roundtrip14"
        android:key="round14"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Pullover"
        android:id="@+id/roundtrip15"
        android:key="round15"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Jacke"
        android:id="@+id/roundtrip16"
        android:key="round16"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sport"
        android:id="@+id/roundtrip17"
        android:key="round17"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Trekking"
        android:id="@+id/roundtrip18"
        android:key="round18"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Flip"
        android:id="@+id/roundtrip19"
        android:key="round19"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Badekleidung"
        android:id="@+id/roundtrip20"
        android:key="round20"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Shorts"
        android:id="@+id/roundtrip21"
        android:key="round21"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Kopfbedeckung"
        android:id="@+id/roundtrip22"
        android:key="round22"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Regenbekleidung"
        android:id="@+id/roundtrip23"
        android:key="round23"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Halstuch"
        android:id="@+id/roundtrip24"
        android:key="round24"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Handschuhe"
        android:id="@+id/roundtrip25"
        android:key="round25"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Duschgel"
        android:id="@+id/roundtrip26"
        android:key="round26"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Zahnbürste"
        android:id="@+id/roundtrip27"
        android:key="round27"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Hand"
        android:id="@+id/roundtrip28"
        android:key="round28"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Lippenpflege"
        android:id="@+id/roundtrip29"
        android:key="round29"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sonnencreme"
        android:id="@+id/roundtrip30"
        android:key="round30"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Rasierschaum"
        android:id="@+id/roundtrip31"
        android:key="round31"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Deo"
        android:id="@+id/roundtrip32"
        android:key="round32"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Kamm"
        android:id="@+id/roundtrip33"
        android:key="round33"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Haargel"
        android:id="@+id/roundtrip34"
        android:key="round34"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Spiegel"
        android:id="@+id/roundtrip35"
        android:key="round35"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Desinfektionsmittel"
        android:id="@+id/roundtrip36"
        android:key="round36"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Feuchttücher"
        android:id="@+id/roundtrip37"
        android:key="round37"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Insektenschutz"
        android:id="@+id/roundtrip38"
        android:key="round38"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Nagelschere"
        android:id="@+id/roundtrip39"
        android:key="round39"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Haarfön"
        android:id="@+id/roundtrip40"
        android:key="round40"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Taschentücher"
        android:id="@+id/roundtrip41"
        android:key="round41"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Handy"
        android:id="@+id/roundtrip42"
        android:key="round42"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Laptop"
        android:id="@+id/roundtrip43"
        android:key="round43"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Fotoapparat"
        android:id="@+id/roundtrip44"
        android:key="round44"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Videokamera"
        android:id="@+id/roundtrip45"
        android:key="round45"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ladegeräte"
        android:id="@+id/roundtrip46"
        android:key="round46"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Speichermedien"
        android:id="@+id/roundtrip47"
        android:key="round47"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Taschenlampe"
        android:id="@+id/roundtrip48"
        android:key="round48"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Wecker"
        android:id="@+id/roundtrip49"
        android:key="round49"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GPSSystem"
        android:id="@+id/roundtrip50"
        android:key="round50"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Adapter"
        android:id="@+id/roundtrip51"
        android:key="round51"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Fernglas"
        android:id="@+id/roundtrip52"
        android:key="round52"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Reiseführer"
        android:id="@+id/roundtrip53"
        android:key="round53"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sprachführer"
        android:id="@+id/roundtrip54"
        android:key="round54"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Notizbuch"
        android:id="@+id/roundtrip55"
        android:key="round55"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Taschenmesser"
        android:id="@+id/roundtrip56"
        android:key="round56"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Feuerzeug"
        android:id="@+id/roundtrip57"
        android:key="round57"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Nähzeug"
        android:id="@+id/roundtrip58"
        android:key="round58"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Lesestoff"
        android:id="@+id/roundtrip59"
        android:key="round59"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ratgeber"
        android:id="@+id/roundtrip60"
        android:key="round60"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Tauschgeschenke"
        android:id="@+id/roundtrip61"
        android:key="round61"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Reiseprogramm"
        android:id="@+id/roundtrip62"
        android:key="round62"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Trinkgeld"
        android:id="@+id/roundtrip63"
        android:key="round63"/>

</LinearLayout>
</ScrollView>