<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.flo.av.chooseClothMan"
    tools:showIn="@layout/activity_choose_cloth_man"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringHemdenHerren"
        android:gravity="left|center"
        android:drawableLeft="@drawable/ic_arrowright"
        android:onClick="chooseHemdHerren"
        android:layout_marginBottom="11dp"
        android:paddingLeft="5dp"
        android:background="@drawable/menuborder"
        android:textSize="16dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringHosenHerren"
        android:gravity="left|center"
        android:drawableLeft="@drawable/ic_arrowright"
        android:onClick="chooseHoseHerren"
        android:layout_marginBottom="11dp"
        android:paddingLeft="5dp"
        android:background="@drawable/menuborder"
        android:textSize="16dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringJeansHerren"
        android:gravity="left|center"
        android:drawableLeft="@drawable/ic_arrowright"
        android:onClick="chooseJeansHerren"
        android:layout_marginBottom="11dp"
        android:paddingLeft="5dp"
        android:background="@drawable/menuborder"
        android:textSize="16dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringAnzugJackenHerren"
        android:gravity="left|center"
        android:drawableLeft="@drawable/ic_arrowright"
        android:onClick="chooseAnzugJackenHerren"
        android:layout_marginBottom="11dp"
        android:paddingLeft="5dp"
        android:background="@drawable/menuborder"
        android:textSize="16dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringUnterwäscheHerren"
        android:gravity="left|center"
        android:drawableLeft="@drawable/ic_arrowright"
        android:onClick="chooseUnterwäscheHerren"
        android:layout_marginBottom="11dp"
        android:paddingLeft="5dp"
        android:background="@drawable/menuborder"
        android:textSize="16dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringSchuheHerren"
        android:gravity="left|center"
        android:drawableLeft="@drawable/ic_arrowright"
        android:onClick="chooseSchuheHerren"
        android:layout_marginBottom="11dp"
        android:paddingLeft="5dp"
        android:background="@drawable/menuborder"
        android:textSize="16dp"/>

</LinearLayout>
</ScrollView>